[package]
name = "gui_cereal"
version = "0.1.0"
authors = ["notrodes"]
edition = "2018"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.8.0"
gio = "0.8.0"
cereal_lib = { git = "https://gitlab.com/notrodes/cereal_lib" }
